Estilos de flex wrap

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,14 @@
         <div class="item1">logo</div>
         <div class="item2">Menu principal</div>
         <div class="item3">Busqueda</div>
+        <div class="item4">Login 1</div>
         <div class="item4">Login</div>
+        <div class="item4">Login</div>
+        <div class="item4">Login</div>
+        <div class="item4">Login</div>
+        <div class="item4">Login</div>
+        <div class="item4">Login</div>
+        <div class="item4">Login 9</div>
     </div>
     
 </body>
