--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <div class="item2">Menu principal</div>
         <div class="item3">Busqueda</div>
         <div class="item4">Login 1</div>
-        <div class="item4">Sidedar</div>
+        <!-- <div class="item4">Sidedar</div>
         <div class="item4">Main</div>
         <div class="item4">Adida</div>
         <div class="item4">calsado</div>
         <div class="item4">Mirada</div>
-        <div class="item4">Mirida</div>
+        <div class="item4">Mirida</div> -->
         
     </div>
     
